Completed Section 7: Test Execution